<?xml version="1.0" encoding="utf-8"?>
<android.support.design.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
                                                 xmlns:app="http://schemas.android.com/apk/res-auto"
                                                 xmlns:tools="http://schemas.android.com/tools"
                                                 android:layout_width="match_parent"
                                                 android:layout_height="match_parent"
                                                 android:fitsSystemWindows="true"
                                                 tools:context="com.hema.recipeapp.ItemListActivity">
    <android.support.v7.widget.Toolbar android:id="@+id/my_toolbar"
                                       android:layout_width="match_parent"
                                       android:layout_height="?attr/actionBarSize"
                                       android:background="?attr/colorPrimary"
                                       android:elevation="4dp"
                                       android:theme="@style/ThemeOverlay.AppCompat.ActionBar"
                                       app:popupTheme="@style/ThemeOverlay.AppCompat.Light"
                                       xmlns:android="http://schemas.android.com/apk/res/android"
                                       xmlns:app="http://schemas.android.com/apk/res-auto" />



    <FrameLayout
        android:id="@+id/frameLayout"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginTop="50dp"
        app:layout_behavior="@string/appbar_scrolling_view_behavior">

        <include layout="@layout/item_list"/>
    </FrameLayout>



</android.support.design.widget.CoordinatorLayout>
